# ScrumPokerTool

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  git2pp.h  main.cpp
src/app/src/: main.cpp
src/zlibstatic/: CMakeLists.txt
